--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css"> -->
 	<!-- Local version -->
 	<link rel="stylesheet" href="simple.css">
+	<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 
 <body id="top">
