--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body id="top">
 	<header>
-		<h1>Simple.css Test Page</h1>
-		<p>This is a test page filled with common HTML elements.</p>
+		<h1>Upper Valley Segment Challenge!</h1>
+		<p>May 1st 2025 - May 31st 2025</p>
 		<nav>
 			<ul>
 				<li><a class="current" href="#text">Text</a></li>
