--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body id="top">
 	<header>
-		<h1>Upper Valley Segment Challenge</h1>
+		<h1>Upper Valley RunningSegment Challenge</h1>
 		<p>May 1st 2025 - May 31st 2025</p>
 		<nav>
 			<ul>
@@ -88,51 +88,28 @@
 			</header>
 			<article>
 				<h3>Submit Your Attempt</h3>
-				<form>
-					<fieldset>
-						<p>
-							<label for="runner_name">Name:</label>
-							<input id="runner_name" type="text" placeholder="Your Name" required>
-						</p>
-						<p>
-							<label for="segment_select">Segment:</label>
-							<select id="segment_select" required>
-								<option value="">Select a segment</option>
-								<option value="segment1">Segment 1</option>
-								<option value="segment2">Segment 2</option>
-								<!-- Add more segments as needed -->
-							</select>
-						</p>
-						<p>
-							<label for="activity_link">Activity Link:</label>
-							<input id="activity_link" type="url" placeholder="Strava/Garmin Activity URL" required>
-						</p>
-						<p>
-							<button type="submit">Submit Attempt</button>
-						</p>
-					</fieldset>
-				</form>
+				<!-- Replace the URL below with your actual Google Form embed URL -->
+				<iframe 
+					src="YOUR_GOOGLE_FORM_URL_HERE"
+					width="100%" 
+					height="800" 
+					frameborder="0" 
+					marginheight="0" 
+					marginwidth="0">
+					Loading...
+				</iframe>
 
 				<h3>Current Leaderboard</h3>
-				<table>
-					<thead>
-						<tr>
-							<th>Segment</th>
-							<th>Runner</th>
-							<th>Time</th>
-							<th>Date</th>
-						</tr>
-					</thead>
-					<tbody>
-						<!-- Leaderboard entries will go here -->
-						<tr>
-							<td>[Segment Name]</td>
-							<td>[Runner Name]</td>
-							<td>[Time]</td>
-							<td>[Date]</td>
-						</tr>
-					</tbody>
-				</table>
+				<!-- Replace the URL below with your actual Google Sheets embed URL -->
+				<iframe 
+					src="YOUR_GOOGLE_SHEETS_RESPONSES_URL_HERE"
+					width="100%" 
+					height="400" 
+					frameborder="0" 
+					marginheight="0" 
+					marginwidth="0">
+					Loading...
+				</iframe>
 			</article>
 		</section>
 	</main>
