--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<h3>Submit Your Attempt</h3>
 				<!-- Replace the URL below with your actual Google Form embed URL -->
 				<iframe 
-					src="YOUR_GOOGLE_FORM_URL_HERE"
+					src="https://forms.gle/oCq25CZo6UD1RmJ76"
 					width="100%" 
 					height="800" 
 					frameborder="0" 
