--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li><a href="#rules">Rules</a></li>
 				<li><a href="#segments">The Segments</a></li>
 				<li><a href="#submissions">Submissions</a></li>
+				<li><a href="#leaderboard">Leaderboard</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -88,7 +89,6 @@
 			</header>
 			<article>
 				<h3>Submit Your Attempt</h3>
-				<!-- Replace the URL below with your actual Google Form embed URL -->
 				<iframe 
 					src="https://forms.gle/oCq25CZo6UD1RmJ76"
 					width="100%" 
@@ -98,18 +98,33 @@
 					marginwidth="0">
 					Loading...
 				</iframe>
+			</article>
+		</section>
 
-				<h3>Current Leaderboard</h3>
-				<!-- Replace the URL below with your actual Google Sheets embed URL -->
-				<iframe 
-					src="YOUR_GOOGLE_SHEETS_RESPONSES_URL_HERE"
-					width="100%" 
-					height="400" 
-					frameborder="0" 
-					marginheight="0" 
-					marginwidth="0">
-					Loading...
-				</iframe>
+		<section id="leaderboard">
+			<header>
+				<h2>Current Leaderboard</h2>
+			</header>
+			<article>
+				<table>
+					<thead>
+						<tr>
+							<th>Segment</th>
+							<th>Runner</th>
+							<th>Time</th>
+							<th>Date</th>
+						</tr>
+					</thead>
+					<tbody>
+						<!-- Example entry (you can duplicate and modify as needed) -->
+						<tr>
+							<td>[Segment Name]</td>
+							<td>[Runner Name]</td>
+							<td>[Time]</td>
+							<td>[Date]</td>
+						</tr>
+					</tbody>
+				</table>
 			</article>
 		</section>
 	</main>
