--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				<li><a href="#rules">Rules</a></li>
 				<li><a href="#segments">The Segments</a></li>
 				<li><a href="#submissions">Submissions</a></li>
+				<li><a href="#prizes">Prizes</a></li>
 				<li><a href="#leaderboard">Leaderboard</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -29,31 +31,14 @@
 				<h2>About</h2>
 			</header>
 			<article>
-				<p>[Your description of the challenge and its purpose will go here. Consider including:</p>
+				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on “racing”. 
+					<br>
+					<br>
+					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment you run nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
+					<br>
+					<br>
+					Everyone is welcome and encouraged to participate! You do not need to have Strava, all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
 				<ul>
-					<li>What is the Upper Valley Segment Challenge?</li>
-					<li>Who can participate?</li>
-					<li>Why was it created?</li>
-					<li>Brief overview of how it works]</li>
-				</ul>
-			</article>
-		</section>
-
-		<section id="rules">
-			<header>
-				<h2>Rules</h2>
-			</header>
-			<article>
-				<h3>Competition Guidelines</h3>
-				<p>[Detailed rules will go here. Consider including:</p>
-				<ul>
-					<li>Eligibility requirements</li>
-					<li>Time period rules</li>
-					<li>Segment attempt rules</li>
-					<li>Recording/tracking requirements</li>
-					<li>Safety guidelines</li>
-					<li>Fair play expectations]</li>
-				</ul>
 			</article>
 		</section>
 
@@ -62,11 +47,14 @@
 				<h2>The Segments</h2>
 			</header>
 			<article>
-				<p>[This section will contain details about each running segment. Consider a format like:]</p>
+				<p>There are 4 segments in the challenge, designed as such to maximize accessibility. All of these segments are equal, which means that each of these, when completed, count for 1 point.</p>
 				
 				<div class="segment">
-					<h3>Segment 1: [Name]</h3>
-					<figure>
+					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=2410926">Pine Park mini loop</a> </h3>
+					<h3>Segment 2: <a href="https://www.doogal.co.uk/Segment?id=24421529">Beaver Meadow Sprint</a> </h3>
+					<h3>Segment 3: <a href="https://www.doogal.co.uk/Segment?id=9292617">Rail Trail, Covered Bridge to Pool</a> </h3>
+					<h3>Segment 4: <a href="https://www.doogal.co.uk/Segment?id=27365741">Hartford Ave to Watson Park</a> </h3>
+					<!-- <figure>
 						<img src="[placeholder for segment map]" alt="Map of Segment 1">
 						<figcaption>
 							<ul>
@@ -76,10 +64,32 @@
 								<li>Location: [Description]</li>
 							</ul>
 						</figcaption>
-					</figure>
+					</figure> --> 
 				</div>
 				
 				<!-- Additional segments will follow the same format -->
+			</article>
+		</section>
+
+		<section id="rules">
+			<header>
+				<h2>Rules</h2>
+			</header>
+			<article>
+				<h3>Competition Guidelines:</h3>
+				<ul>
+					<li>Segments are only one direction. There is an established start point, and an established finish point. So if you complete a segment and then run that segment back the way you came, this would still only count as one segment completion. </li>
+					<br>
+					<li>One segment completion equals one point. You may complete a segment as many times as you want within a run (and thus you can net multiple points all within one run). You may also complete multiple segments in one run.</li>
+					<br>
+					<li>Segment completions must be done on foot. No vehicle assistance allowed.</li>
+					<br>
+					<li>Segment completions have to be proven; to prove you’ve finished a segment, you can either submit a link to the strava/garmin/coros activity, or link to a shared google doc with a picture/screenshot of the run details. Docs should be shared with uppervalleyrunningsegment@gmail.com </li>
+					<br>
+					<li>Anyone and everyone is welcome to participate! Spread the word to your friends, family, and neighbors!</li>
+					<br>
+					<li>This challenge’s time frame is from May 1st to May 31st, 11:59pm</li>
+				</ul>
 			</article>
 		</section>
 
@@ -101,32 +111,60 @@
 			</article>
 		</section>
 
-		<section id="leaderboard">
+		<section id="prizes">
 			<header>
-				<h2>Current Leaderboard</h2>
+				<h2>Prizes</h2>
 			</header>
 			<article>
+				<p>[Your description of the challenge and its purpose will go here. Consider including:</p>
+				<ul>
+					<li>What is the Upper Valley Segment Challenge?</li>
+					<li>Who can participate?</li>
+					<li>Why was it created?</li>
+					<li>Brief overview of how it works]</li>
+				</ul>
+			</article>
+		</section>
+
+		<section id="leaderboard">
+			<header>
+				<h2>Leaderboard</h2>
+			</header>
+			<article>
+				<p>Leaderboard will be updated every few days</p>
 				<table>
 					<thead>
 						<tr>
-							<th>Segment</th>
-							<th>Runner</th>
-							<th>Time</th>
-							<th>Date</th>
-						</tr>
+							<th>Runner First Name</th>
+							<th>Total # Segments</th>
+							<th>Seg. 1</th>
+							<th>Seg. 2</th>
+							<th>Seg. 3</th>
+							<th>Seg. 4</th>						</tr>
 					</thead>
 					<tbody>
 						<!-- Example entry (you can duplicate and modify as needed) -->
 						<tr>
-							<td>[Segment Name]</td>
-							<td>[Runner Name]</td>
-							<td>[Time]</td>
-							<td>[Date]</td>
+							<td>[Placeholder]</td>
+							<td>[Placeholder]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
 						</tr>
 					</tbody>
 				</table>
 			</article>
 		</section>
+
+		<section id="contact">
+			<header>
+				<h2>Contact</h2>
+			</header>
+			<article>
+				<p>Email: uppervalleyrunningsegment[att]gmail.com</p>
+		</section>
+
 	</main>
 
 	<footer>
