minor word changes

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				<h2>About</h2>
 			</header>
 			<article>
-				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on “racing”. 
+				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on racing. 
 					<br>
 					<br>
-					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment you run nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
+					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment completion nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
 					<br>
 					<br>
 					Everyone is welcome and encouraged to participate! You do not need to have Strava, all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
@@ -47,7 +47,7 @@
 				<h2>The Segments</h2>
 			</header>
 			<article>
-				<p>There are 4 segments in the challenge, designed as such to maximize accessibility. All of these segments are equal, which means that each of these, when completed, count for 1 point.</p>
+				<p>There are 4 segments in the challenge, designed as such to maximize accessibility. All of these segments count for the same, which means that each of these, when completed, count for 1 point.</p>
 				
 				<div class="segment">
 					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=2410926">Pine Park mini loop</a> </h3>
@@ -86,6 +86,8 @@
 					<br>
 					<li>Segment completions have to be proven; to prove you’ve finished a segment, you can either submit a link to the strava/garmin/coros activity, or link to a shared google doc with a picture/screenshot of the run details. Docs should be shared with uppervalleyrunningsegment@gmail.com </li>
 					<br>
+					<li>Segment completions should be submitted within 5 days of completion. In the last week, May 24th-May 31st, submissions should be within 24 hours of completion.</li>
+					<br>
 					<li>Anyone and everyone is welcome to participate! Spread the word to your friends, family, and neighbors!</li>
 					<br>
 					<li>This challenge’s time frame is from May 1st to May 31st, 11:59pm</li>
@@ -116,13 +118,13 @@
 				<h2>Prizes</h2>
 			</header>
 			<article>
-				<p>[Your description of the challenge and its purpose will go here. Consider including:</p>
-				<ul>
+				<p>prizes are still TBD</p>
+				<!-- <ul>
 					<li>What is the Upper Valley Segment Challenge?</li>
 					<li>Who can participate?</li>
 					<li>Why was it created?</li>
 					<li>Brief overview of how it works]</li>
-				</ul>
+				</ul> -->
 			</article>
 		</section>
 
