added prize words

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<h2>Prizes</h2>
 			</header>
 			<article>
-				<p>prizes are still TBD</p>
+				<p>prizes are still TBD, but there will be prizes!!</p>
 				<!-- <ul>
 					<li>What is the Upper Valley Segment Challenge?</li>
 					<li>Who can participate?</li>
