--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment completion nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
 					<br>
 					<br>
-					Everyone is welcome and encouraged to participate! You do not need to have Strava, all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
+					Everyone is welcome and encouraged to participate! You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
 				<ul>
 			</article>
 		</section>
@@ -118,7 +118,7 @@
 				<h2>Prizes</h2>
 			</header>
 			<article>
-				<p>prizes are still TBD, but there will be prizes!!</p>
+				<p>prizes are still TBD, but there will be prizes for at least the top 3!!</p>
 				<!-- <ul>
 					<li>What is the Upper Valley Segment Challenge?</li>
 					<li>Who can participate?</li>
