--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body id="top">
 	<header>
-		<h1>Upper Valley Running Segment Challenge</h1>
+		<h1>Upper Valley Segment Running Challenge</h1>
 		<p>May 1st 2025 - May 31st 2025</p>
 		<nav>
 			<ul>
@@ -164,7 +164,7 @@
 				<h2>Contact</h2>
 			</header>
 			<article>
-				<p>Email: uppervalleyrunningsegment[att]gmail.com</p>
+				<p>Email: uppervalleysegmentrunning[att]gmail.com</p>
 		</section>
 
 	</main>
