--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
 				<h2>The Segments</h2>
 			</header>
 			<article>
-				<p>There are 4 segments in the challenge, designed as such to maximize accessibility. All of these segments count for the same, which means that each of these, when completed, count for 1 point.</p>
+				<p>There are 6 segments in the challenge, designed as such to maximize accessibility. All of these segments count for the same, which means that each of these, when completed, count for 1 point.</p>
 				
 				<div class="segment">
-					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=2410926">Pine Park mini loop</a> </h3>
-					<h3>Segment 2: <a href="https://www.doogal.co.uk/Segment?id=24421529">Beaver Meadow Sprint</a> </h3>
-					<h3>Segment 3: <a href="https://www.doogal.co.uk/Segment?id=9292617">Rail Trail, Covered Bridge to Pool</a> </h3>
-					<h3>Segment 4: <a href="https://www.doogal.co.uk/Segment?id=27365741">Hartford Ave to Watson Park</a> </h3>
+					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=39041149">Pine Park River</a> </h3>
+					<h3>Segment 2: <a href="https://www.doogal.co.uk/Segment?id=39041271">Beaver Meadow by Huntley</a> </h3>
+					<h3>Segment 3: <a href="https://www.doogal.co.uk/Segment?id=39041185">Rail Trail dirt</a> </h3>
+					<h3>Segment 4: <a href="https://www.doogal.co.uk/Segment?id=39041229">Along Hartford ave. under 91</a> </h3>
+					<h3>Segment 5: <a href="https://www.doogal.co.uk/Segment?id=39041342">Downtown WRJ</a> </h3>
+					<h3>Segment 6: <a href="https://www.doogal.co.uk/Segment?id=39041383">Mt. Support by SOJ</a> </h3>
 					<!-- <figure>
 						<img src="[placeholder for segment map]" alt="Map of Segment 1">
 						<figcaption>
@@ -142,13 +144,17 @@
 							<th>Seg. 1</th>
 							<th>Seg. 2</th>
 							<th>Seg. 3</th>
-							<th>Seg. 4</th>						</tr>
+							<th>Seg. 4</th>
+							<th>Seg. 5</th>
+							<th>Seg. 6</th>						</tr>
 					</thead>
 					<tbody>
 						<!-- Example entry (you can duplicate and modify as needed) -->
 						<tr>
 							<td>[Placeholder]</td>
-							<td>[Placeholder]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
