--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h2>About</h2>
 			</header>
 			<article>
-				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on racing. 
+				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025" target="_blank">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/" target="_blank">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on racing. 
 					<br>
 					<br>
 					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment completion nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
@@ -50,12 +50,12 @@
 				<p>There are 6 segments in the challenge, designed as such to maximize accessibility. All of these segments count for the same, which means that each of these, when completed, count for 1 point.</p>
 				
 				<div class="segment">
-					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=39041149">Pine Park River</a> </h3>
-					<h3>Segment 2: <a href="https://www.doogal.co.uk/Segment?id=39041271">Beaver Meadow by Huntley</a> </h3>
-					<h3>Segment 3: <a href="https://www.doogal.co.uk/Segment?id=39041185">Rail Trail dirt</a> </h3>
-					<h3>Segment 4: <a href="https://www.doogal.co.uk/Segment?id=39041229">Along Hartford ave. under 91</a> </h3>
-					<h3>Segment 5: <a href="https://www.doogal.co.uk/Segment?id=39041342">Downtown WRJ</a> </h3>
-					<h3>Segment 6: <a href="https://www.doogal.co.uk/Segment?id=39041383">Mt. Support by SOJ</a> </h3>
+					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=39041149" target="_blank">Pine Park River</a> </h3>
+					<h3>Segment 2: <a href="https://www.doogal.co.uk/Segment?id=39041271" target="_blank">Beaver Meadow by Huntley</a> </h3>
+					<h3>Segment 3: <a href="https://www.doogal.co.uk/Segment?id=39041185" target="_blank">Rail Trail dirt</a> </h3>
+					<h3>Segment 4: <a href="https://www.doogal.co.uk/Segment?id=39041229" target="_blank">Along Hartford ave. under 91</a> </h3>
+					<h3>Segment 5: <a href="https://www.doogal.co.uk/Segment?id=39041342" target="_blank">Downtown WRJ</a> </h3>
+					<h3>Segment 6: <a href="https://www.doogal.co.uk/Segment?id=39041383" target="_blank">Mt. Support by SOJ</a> </h3>
 					<!-- <figure>
 						<img src="[placeholder for segment map]" alt="Map of Segment 1">
 						<figcaption>
