--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
 				<h2>Prizes</h2>
 			</header>
 			<article>
-				<p>prizes are still TBD, but there will be prizes for at least the top 3!!</p>
+				
+				<div class="segment">
+					<h3>First Place: $100 Cash</h3>
+					<h3>Second Place: $60 Cash</h3>
+
+					<p>Other prizes still TBD, but there will be prizes for at least the top 3!!</p>
 				<!-- <ul>
 					<li>What is the Upper Valley Segment Challenge?</li>
 					<li>Who can participate?</li>
@@ -170,7 +175,8 @@
 				<h2>Contact</h2>
 			</header>
 			<article>
-				<p>Email: uppervalleysegmentrunning[att]gmail.com</p>
+				<p>Got questions? Email: uppervalleysegmentrunning[att]gmail.com</p>
+				<p>Also, please contact the above if you'd like to help crowdfund prizes! 100% of whatever you donate will go directly into the prize pool.  </p>
 		</section>
 
 	</main>
