microedits, added prizes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body id="top">
 	<header>
 		<h1>Upper Valley Segment Running Challenge</h1>
-		<p>May 1st 2025 - May 31st 2025</p>
+		<p>For the love of the run</p>
+		<h34>May 1st 2025 - May 31st 2025</h34>
 		<nav>
 			<ul>
 				<li><a href="#about">About</a></li>
@@ -86,7 +87,7 @@
 					<br>
 					<li>Segment completions must be done on foot. No vehicle assistance allowed.</li>
 					<br>
-					<li>Segment completions have to be proven; to prove you’ve finished a segment, you can either submit a link to the strava/garmin/coros activity, or link to a shared google doc with a picture/screenshot of the run details. Docs should be shared with uppervalleyrunningsegment@gmail.com </li>
+					<li>Segment completions have to be proven; to prove you’ve finished a segment, you can either submit a link to the strava/garmin/coros activity, or link to a shared google doc with a picture/screenshot of the run details. Docs should be shared with uppervalleysegmentrunning@gmail.com </li>
 					<br>
 					<li>Segment completions should be submitted within 5 days of completion. In the last week, May 24th-May 31st, submissions should be within 24 hours of completion.</li>
 					<br>
@@ -103,6 +104,7 @@
 			</header>
 			<article>
 				<h3>Submit Your Attempt</h3>
+				<!-- <p>Every run activity should be it's own submission</p> -->
 				<iframe 
 					src="https://forms.gle/oCq25CZo6UD1RmJ76"
 					width="100%" 
@@ -122,10 +124,13 @@
 			<article>
 				
 				<div class="segment">
-					<h3>First Place: $100 Cash</h3>
-					<h3>Second Place: $60 Cash</h3>
+					<h3>First Place: Eternal Glory, and $100 Cash </h3> 	
+					<h3>Second Place: Glory; $60 Cash</h3>
+					<h3>Third Place: NoxGear vest </h3>
+					<h3>Fourth Place: UVRC shirt and/or socks </h3>
+					<h3>Fifth Place: UVRC shirt and/or socks </h3>
 
-					<p>Other prizes still TBD, but there will be prizes for at least the top 3!!</p>
+					<p></p>
 				<!-- <ul>
 					<li>What is the Upper Valley Segment Challenge?</li>
 					<li>Who can participate?</li>
