--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h2>About</h2>
 			</header>
 			<article>
-				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025" target="_blank">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/" target="_blank">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on racing. 
+				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025" target="_blank">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. In one city, the winner ran 450+ miles on a .22 mi segment, running that segment more than 2000 times! You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/" target="_blank">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on racing. 
 					<br>
 					<br>
 					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment completion nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
@@ -48,7 +48,7 @@
 				<h2>The Segments</h2>
 			</header>
 			<article>
-				<p>There are 6 segments in the challenge, designed as such to maximize accessibility. All of these segments count for the same, which means that each of these, when completed, count for 1 point.</p>
+				<p>There are 6 segments in the challenge, designed as such to maximize accessibility. All of these segments count for the same, which means that each of these, when completed, count for 1 point. Each segment is roughly .4 miles, and roughly flat.</p>
 				
 				<div class="segment">
 					<h3>Segment 1: <a href="https://www.doogal.co.uk/Segment?id=39041149" target="_blank">Pine Park River</a> </h3>
@@ -129,8 +129,7 @@
 					<h3>Third Place: NoxGear vest </h3>
 					<h3>Fourth Place: UVRC shirt and/or socks </h3>
 					<h3>Fifth Place: UVRC shirt and/or socks </h3>
-
-					<p></p>
+					<p> Sixth Place and onwards: Great fun!</p>
 				<!-- <ul>
 					<li>What is the Upper Valley Segment Challenge?</li>
 					<li>Who can participate?</li>
