--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 				<h2>About</h2>
 			</header>
 			<article>
-				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025" target="_blank">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. In one city, the winner ran 450+ miles on a .22 mi segment, running that segment more than 2000 times! You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/" target="_blank">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not as much speed, which is a fun twist on racing. 
+				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025" target="_blank">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. In one city, the winner ran 450+ miles on a .22 mi segment, running that segment more than 2000 times! You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/" target="_blank">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not speed, which is a fun twist on racing. 
 					<br>
 					<br>
 					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment completion nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
 					<br>
 					<br>
-					<strong>Everyone</strong> is welcome and encouraged to participate! You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
+					<strong>Everyone</strong> is welcome and <strong>encouraged</strong> to participate! You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
 				<ul>
 			</article>
 		</section>
