--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<ul>
 					<li>Segments are only one direction. There is an established start point, and an established finish point. So if you complete a segment and then run that segment back the way you came, this would still only count as one segment completion. </li>
 					<br>
-					<li>One segment completion equals one point. You may complete a segment as many times as you want within a run (and thus you can net multiple points all within one run). You may also complete multiple segments in one run.</li>
+					<li>One segment completion equals one point. You may complete a segment as many times as you want within a run (and thus you can net multiple points all within one run). You may also complete multiple segments in one run. You do not need to run all 6 segments -- in fact, you could win the entire competition by only running one segment (a lot of times).</li>
 					<br>
 					<li>Segment completions must be done on foot. No vehicle assistance allowed.</li>
 					<br>
