hopefully prempting clarity?

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 					For our Upper Valley edition, we will adapt the rules a little to encourage wider participation. But the gist of the competition is: <strong>every segment completion nets you 1 point. Whoever has the most points at the end of the competition wins.</strong>
 					<br>
 					<br>
-					<strong>Everyone</strong> is welcome and <strong>encouraged</strong> to participate! You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
+					<strong>Everyone</strong> is welcome and <strong>encouraged</strong> to participate! There is no cost to entry. You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
+					<strong>How it Works:</strong> After any run in which you've completed at least one segment, <a href="#submissions">submit</a> that run and your segment completion(s) will reflect on the leaderboard the next time it is updated. 
+
 				<ul>
 			</article>
 		</section>
@@ -103,7 +105,7 @@
 				<h2>Submissions</h2>
 			</header>
 			<article>
-				<h3>Submit Your Attempt</h3>
+				<h3>Event Submissions</h3>
 				<!-- <p>Every run activity should be it's own submission</p> -->
 				<iframe 
 					src="https://forms.gle/oCq25CZo6UD1RmJ76"
