--- a/index.html
+++ b/index.html
@@ -146,29 +146,31 @@
 				<h2>Leaderboard</h2>
 			</header>
 			<article>
-				<p>Leaderboard will be updated every few days</p>
+				<p>Last update 5/1 -- Leaderboard will be updated every few days</p>
 				<table>
 					<thead>
 						<tr>
+							<th>Place</th>
 							<th>Runner First Name</th>
 							<th>Total # Segments</th>
-							<th>Seg. 1</th>
-							<th>Seg. 2</th>
-							<th>Seg. 3</th>
-							<th>Seg. 4</th>
-							<th>Seg. 5</th>
-							<th>Seg. 6</th>						</tr>
+							<th>Pine Park</th>
+							<th>Beaver Meadow</th>
+							<th>Rail Trail</th>
+							<th>Along Hartford</th>
+							<th>WRJ</th>
+							<th>by SOJ</th>						</tr>
 					</thead>
 					<tbody>
 						<!-- Example entry (you can duplicate and modify as needed) -->
 						<tr>
-							<td>[Placeholder]</td>
+							<td>1st</td>
+							<td>Ryan Scelza</td>
+							<td>2</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
+							<td>[2]</td>
 							<td>[0]</td>
 						</tr>
 					</tbody>
