--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<br>
 					<br>
 					<strong>Everyone</strong> is welcome and <strong>encouraged</strong> to participate! There is no cost to entry. You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
-					<strong>How it Works:</strong> After any run in which you've completed at least one segment, <a href="#submissions">submit</a> that run and your segment completion(s) will reflect on the leaderboard the next time it is updated. 
+					<strong>How it Works:</strong> After any run in which you've completed at least one segment, <a href="#submissions">submit</a> that run and your segment completion(s) will reflect on the leaderboard the next time it is updated. Submissions should be done within 5 days of race start
 
 				<ul>
 			</article>
@@ -146,9 +146,9 @@
 				<h2>Leaderboard</h2>
 			</header>
 			<article>
-				<p>Last update 5/1 -- Leaderboard will be updated every few days</p>
+				<p>Last update 5/3 -- Leaderboard will be updated every few days</p>
 				<table>
-					<thead>
+					<thread> 
 						<tr>
 							<th>Place</th>
 							<th>Runner First Name</th>
@@ -159,18 +159,29 @@
 							<th>Along Hartford</th>
 							<th>WRJ</th>
 							<th>by SOJ</th>						</tr>
-					</thead>
+					</thread>
 					<tbody>
 						<!-- Example entry (you can duplicate and modify as needed) -->
 						<tr>
 							<td>1st</td>
 							<td>Ryan Scelza</td>
-							<td>2</td>
+							<td>7</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
-							<td>[2]</td>
+							<td>[5]</td>
+							<td>[0]</td>
+						</tr>
+						<tr>
+							<td>2nd</td>
+							<td>Peter Knox</td>
+							<td>1</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[1]</td>
+							<td>[0]</td>
+							<td>[0]</td>
 							<td>[0]</td>
 						</tr>
 					</tbody>
