--- a/index.html
+++ b/index.html
@@ -165,16 +165,27 @@
 						<tr>
 							<td>1st</td>
 							<td>Ryan Scelza</td>
-							<td>7</td>
+							<td>17</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
 							<td>[0]</td>
-							<td>[7]</td>
+							<td>[17]</td>
 							<td>[0]</td>
 						</tr>
 						<tr>
 							<td>2nd</td>
+							<td>Dan Collison</td>
+							<td>13</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+						</tr>
+						<tr>
+							<td>3rd</td>
 							<td>Peter Knox</td>
 							<td>1</td>
 							<td>[0]</td>
