--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<br>
 					<br>
 					<strong>Everyone</strong> is welcome and <strong>encouraged</strong> to participate! There is no cost to entry. You do not need to have Strava; all you have to have is some way of tracking your run (Garmin, nikerun, apple, coros, etc.)  </p>
-					<strong>How it Works:</strong> After any run in which you've completed at least one segment, <a href="#submissions">submit</a> that run and your segment completion(s) will reflect on the leaderboard the next time it is updated. Submissions should be done within 5 days of race start
+					<strong>How it Works:</strong> After any run in which you've completed at least one segment, <a href="#submissions">submit</a> that run and your segment completion(s) will reflect on the leaderboard the next time it is updated. Submissions should be done within 1 week of completion (to make sure the leaderboard is at least somewhat up-to-date)
 
 				<ul>
 			</article>
