--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
 						</tr>
 						<tr>
 							<td>3rd</td>
+							<td>Chuck Morgan</td>
+							<td>3</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[3]</td>
+						</tr>
+						<tr>
+							<td>4th</td>
 							<td>Peter Knox</td>
 							<td>1</td>
 							<td>[0]</td>
