--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@
 						<!-- Example entry (you can duplicate and modify as needed) -->
 						<tr>
 							<td>1st</td>
+							<td>Ben Jones</td>
+							<td>32</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[0]</td>
+							<td>[32]</td>
+							<td>[0]</td>
+						</tr>
+						<tr>
+							<td>2st</td>
 							<td>Ryan Scelza</td>
 							<td>17</td>
 							<td>[0]</td>
@@ -174,7 +185,7 @@
 							<td>[0]</td>
 						</tr>
 						<tr>
-							<td>2nd</td>
+							<td>3rd</td>
 							<td>Dan Collison</td>
 							<td>13</td>
 							<td>[0]</td>
@@ -185,7 +196,7 @@
 							<td>[0]</td>
 						</tr>
 						<tr>
-							<td>3rd</td>
+							<td>4th</td>
 							<td>Peter Knox</td>
 							<td>5</td>
 							<td>[0]</td>
@@ -196,7 +207,7 @@
 							<td>[0]</td>
 						</tr>
 						<tr>
-							<td>4th</td>
+							<td>5th</td>
 							<td>Chuck Morgan</td>
 							<td>3</td>
 							<td>[0]</td>
