--- a/index.html
+++ b/index.html
@@ -166,56 +166,67 @@
 							<td>1st</td>
 							<td>Ben Jones</td>
 							<td>32</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[32]</td>
-							<td>[0]</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>32</td>
+							<td></td>
 						</tr>
 						<tr>
 							<td>2st</td>
 							<td>Ryan Scelza</td>
 							<td>17</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[17]</td>
-							<td>[0]</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>17</td>
+							<td></td>
 						</tr>
 						<tr>
 							<td>3rd</td>
 							<td>Dan Collison</td>
 							<td>13</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>13</td>
 						</tr>
 						<tr>
 							<td>4th</td>
 							<td>Peter Knox</td>
 							<td>5</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[5]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
+							<td></td>
+							<td></td>
+							<td>5</td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td>5th</td>
+							<td>David Bardach</td>
+							<td>5</td>
+							<td></td>
+							<td>4</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<td>6th</td>
 							<td>Chuck Morgan</td>
 							<td>3</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[0]</td>
-							<td>[3]</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>3</td>
 						</tr>
 					</tbody>
 				</table>
