--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
 						</tr>
 						<tr>
 							<td>6th</td>
+							<td>Angela Wyse</td>
+							<td>5</td>
+							<td>5</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>7th</td>
 							<td>Chuck Morgan</td>
 							<td>3</td>
 							<td></td>
