--- a/index.html
+++ b/index.html
@@ -230,6 +230,17 @@
 						</tr>
 						<tr>
 							<td>7th</td>
+							<td>William Ren</td>
+							<td>5</td>
+							<td>5</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>8th</td>
 							<td>Chuck Morgan</td>
 							<td>3</td>
 							<td></td>
