update leaderboard/ add spreadsheet

--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
 				<h2>Leaderboard</h2>
 			</header>
 			<article>
-				<p>Last update 5/10 -- Leaderboard will be updated every few days</p>
+				<p>Last update 5/11 -- Leaderboard will be updated every few days. To see how the leaderboard has changed day by day click <a href="https://docs.google.com/spreadsheets/d/1WkEU9Nbc5vMD743usNdMSq7Y4Se2i1dKNMnpUZiP85A/edit?usp=sharing" target="_blank">here</a></p>
 				<table>
 					<thread> 
 						<tr>
 							<th>Place</th>
-							<th>Runner First Name</th>
-							<th>Total # Segments</th>
+							<th>Runner Name</th>
+							<th>Total Seg.</th>
 							<th>Pine Park</th>
-							<th>Beaver Meadow</th>
+							<th>Beav. Mead.</th>
 							<th>Rail Trail</th>
-							<th>Along Hartford</th>
+							<th>By Hart.</th>
 							<th>WRJ</th>
 							<th>by SOJ</th>						</tr>
 					</thread>
@@ -208,10 +208,21 @@
 						</tr>
 						<tr>
 							<td>5th</td>
-							<td>David Bardach</td>
-							<td>7</td>
+							<td>William Ren</td>
+							<td>12</td>
+							<td>12</td>
 							<td></td>
-							<td>6</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>6th</td>
+							<td>David Bardach</td>
+							<td>8</td>
+							<td></td>
+							<td>7</td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -220,17 +231,6 @@
 						<tr>
 							<td>6th</td>
 							<td>Angela Wyse</td>
-							<td>5</td>
-							<td>5</td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>7th</td>
-							<td>William Ren</td>
 							<td>5</td>
 							<td>5</td>
 							<td></td>
@@ -249,6 +249,17 @@
 							<td></td>
 							<td></td>
 							<td>3</td>
+						</tr>
+						<tr>
+							<td>9th</td>
+							<td>Randall Reynolds</td>
+							<td>2</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>2</td>
 						</tr>
 					</tbody>
 				</table>
