add elijah, update dan ryan

--- a/index.html
+++ b/index.html
@@ -175,25 +175,25 @@
 						</tr>
 						<tr>
 							<td>2nd</td>
-							<td>Dan Collison</td>
-							<td>44</td>
-							<td>8</td>
-							<td>5</td>
-							<td>9</td>
-							<td>7</td>
-							<td>6</td>
-							<td>9</td>
-						</tr>
-						<tr>
-							<td>3rd</td>
 							<td>Ryan Scelza</td>
-							<td>41</td>
+							<td>61</td>
 							<td></td>
 							<td></td>
 							<td></td>
 							<td>11</td>
-							<td>30</td>
+							<td>50</td>
 							<td></td>
+						</tr>
+						<tr>
+							<td>3rd</td>
+							<td>Dan Collison</td>
+							<td>58</td>
+							<td>16</td>
+							<td>11</td>
+							<td>9</td>
+							<td>7</td>
+							<td>6</td>
+							<td>9</td>
 						</tr>
 						<tr>
 							<td>4th</td>
@@ -209,8 +209,8 @@
 						<tr>
 							<td>5th</td>
 							<td>William Ren</td>
-							<td>12</td>
-							<td>12</td>
+							<td>18</td>
+							<td>18</td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -219,6 +219,17 @@
 						</tr>
 						<tr>
 							<td>6th</td>
+							<td>Elijah Putnam</td>
+							<td>13</td>
+							<td>8</td>
+							<td></td>
+							<td>5</td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>7th</td>
 							<td>David Bardach</td>
 							<td>8</td>
 							<td></td>
@@ -229,7 +240,7 @@
 							<td>1</td>
 						</tr>
 						<tr>
-							<td>7th</td>
+							<td>8th</td>
 							<td>Angela Wyse</td>
 							<td>5</td>
 							<td>5</td>
@@ -240,7 +251,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td>8th</td>
+							<td>9th</td>
 							<td>Chuck Morgan</td>
 							<td>3</td>
 							<td></td>
@@ -251,7 +262,7 @@
 							<td>3</td>
 						</tr>
 						<tr>
-							<td>9th</td>
+							<td>10th</td>
 							<td>Randall Reynolds</td>
 							<td>2</td>
 							<td></td>
