--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<main>
 		<section id="about">
 			<header>
-				<h2>About</h2>
+				<h2>ONE WEEK LEFT!</h2>
 			</header>
 			<article>
 				<p>The Upper Valley Running Segment Challenge is based off of a <a href="https://newsroom.chipotle.com/2025-01-02-CHIPOTLE-X-STRAVA-PARTNERSHIP-GOES-GLOBAL-INTRODUCING-THE-CITY-CHALLENGE-IN-25-MARKETS-TO-KICK-OFF-2025" target="_blank">similar challenge</a> that happened in January, where runners in different cities competed against each other by running a specific “segment” as many times as possible. In one city, the winner ran 450+ miles on a .22 mi segment, running that segment more than 2000 times! You can read more about this challenge  <a href="https://run.outsideonline.com/general/free-burrito-running-challenge/" target="_blank">here</a> – it was very fun to follow along! I thought that this challenge would be fun to bring to the upper valley as it rewards distance and time on feet, not speed, which is a fun twist on racing. 
@@ -146,7 +146,7 @@
 				<h2>Leaderboard</h2>
 			</header>
 			<article>
-				<p>Last update 5/23 -- Leaderboard will be updated every few days. To see how the leaderboard has changed day by day click <a href="https://docs.google.com/spreadsheets/d/1WkEU9Nbc5vMD743usNdMSq7Y4Se2i1dKNMnpUZiP85A/edit?usp=sharing" target="_blank">here</a></p>
+				<p>Last update 5/24 -- Leaderboard will be updated every few days. To see how the leaderboard has changed day by day click <a href="https://docs.google.com/spreadsheets/d/1WkEU9Nbc5vMD743usNdMSq7Y4Se2i1dKNMnpUZiP85A/edit?usp=sharing" target="_blank">here</a></p>
 				<table>
 					<thread> 
 						<tr>
@@ -176,19 +176,19 @@
 						<tr>
 							<td>2nd</td>
 							<td>Dan Collison</td>
-							<td>96</td>
-							<td>16</td>
+							<td>138</td>
+							<td>24</td>
 							<td>23</td>
-							<td>14</td>
-							<td>16</td>
-							<td>10</td>
-							<td>17</td>
+							<td>22</td>
+							<td>23</td>
+							<td>22</td>
+							<td>24</td>
 						</tr>
 						<tr>
 							<td>3rd</td>
 							<td>Elijah Putnam</td>
-							<td>87</td>
-							<td>82</td>
+							<td>118</td>
+							<td>113</td>
 							<td></td>
 							<td>5</td>
 							<td></td>
@@ -197,24 +197,24 @@
 						</tr>
 						<tr>
 							<td>4th</td>
-							<td>Ryan Scelza</td>
-							<td>85</td>
+							<td>William Ren</td>
+							<td>115</td>
+							<td>115</td>
 							<td></td>
 							<td></td>
 							<td></td>
-							<td>11</td>
-							<td>74</td>
+							<td></td>
 							<td></td>
 						</tr>
 						<tr>
 							<td>5th</td>
-							<td>William Ren</td>
-							<td>82</td>
-							<td>82</td>
+							<td>Ryan Scelza</td>
+							<td>97</td>
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>11</td>
+							<td>86</td>
 							<td></td>
 						</tr>
 						<tr>
