--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<h2>Leaderboard</h2>
 			</header>
 			<article>
-				<p>Last update 5/28 -- Leaderboard will be updated every few days. To see how the leaderboard has changed day by day click <a href="https://docs.google.com/spreadsheets/d/1WkEU9Nbc5vMD743usNdMSq7Y4Se2i1dKNMnpUZiP85A/edit?usp=sharing" target="_blank">here</a></p>
+				<p>Last update 5/31 morning. To see how the leaderboard has changed day by day click <a href="https://docs.google.com/spreadsheets/d/1WkEU9Nbc5vMD743usNdMSq7Y4Se2i1dKNMnpUZiP85A/edit?usp=sharing" target="_blank">here</a></p>
 				<table>
 					<thread> 
 						<tr>
@@ -164,20 +164,31 @@
 						<!-- Example entry (you can duplicate and modify as needed) -->
 						<tr>
 							<td>1st</td>
-							<td>Dan Collison</td>
-							<td>179</td>
-							<td>24</td>
-							<td>31</td>
-							<td>31</td>
-							<td>31</td>
-							<td>31</td>
-							<td>31</td>
+							<td>Elijah Putnam</td>
+							<td>217</td>
+							<td>212</td>
+							<td></td>
+							<td>5</td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td>2nd</td>
+							<td>Dan Collison</td>
+							<td>186</td>
+							<td>31</td>
+							<td>31</td>
+							<td>31</td>
+							<td>31</td>
+							<td>31</td>
+							<td>31</td>
+						</tr>
+						<tr>
+							<td>3rd</td>
 							<td>William Ren</td>
-							<td>165</td>
-							<td>165</td>
+							<td>166</td>
+							<td>166</td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -185,7 +196,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td>3rd</td>
+							<td>4th</td>
 							<td>Ben Jones</td>
 							<td>164</td>
 							<td></td>
@@ -193,17 +204,6 @@
 							<td></td>
 							<td></td>
 							<td>164</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>4th</td>
-							<td>Elijah Putnam</td>
-							<td>150</td>
-							<td>145</td>
-							<td></td>
-							<td>5</td>
-							<td></td>
-							<td></td>
 							<td></td>
 						</tr>
 						<tr>
